--- a/frontend/src/pages/styles.css
+++ b/frontend/src/pages/styles.css
@@ -1,4 +1,53 @@
-.row{ 
+.button{
+     display: flex;
+     flex-direction: column;
+     background-color: rgb(0, 174, 239);
+     border-radius: 40px;
+     color: white;
+     font-family:'Museo Sans';
+     border-color: rgb(0, 174, 239);
+     width: 15.5em;
+     text-align: center;
+     padding-left: 6.5em;
+     padding-top: .9em;
+     margin-bottom: 1em;
+     height: 3.5em;
+     font-weight: 700;
+ }
+ .redirect{
+    color: rgb(0, 174, 239);
+}
+.input{
+    margin-bottom: 1.5em;
+    width: 15em;
+    height: 2.5em
+}
+.signup{
+    display: flex;
+    flex-direction: column;
+    background-color: rgb(0, 174, 239);
+    border-radius: 40px;
+    color: white;
+    font-family:'Museo Sans';
+    border-color: rgb(0, 174, 239);
+    width: 15.5em;
+    text-align: center;
+    padding-left: 5.65em;
+    padding-top: .9em;
+    margin-bottom: 1em;
+    height: 3.5em;
+    font-weight: 700;
+}
+.redirect{
+    font-family: 'Museo Sans';
+    font-weight: 700;
+    text-decoration: none;
+}
+.allready{
+    font-family: 'Museo Sans';
+}
+@media only screen and (min-width: 1200px) {
+  .row{ 
     display: flex;
     flex-wrap:wrap;}
 .form{
@@ -6,12 +55,11 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin-left: 15em;
+    margin-left: 19em;
     text-align: center;
     font-family: 'Museo Sans';
 
 }
-
 .logo{
     display: flex;
     width: 40em;
@@ -23,27 +71,6 @@
     justify-content: center;
     align-items: center;
     margin-left: 15em;
-}
-.button{
-   display: flex;
-    flex-direction: column;
-    background-color: rgb(0, 174, 239);
-    border-radius: 40px;
-    color: white;
-    font-family:'Museo Sans';
-    border-color: rgb(0, 174, 239);
-    width: 10em;
-    text-align: center;
-    padding-left: 3.2em;
-    padding-top: .5em;
-    margin-top: 1em;
-    margin-bottom: 1em;
-    margin-left: 4em;
-    height: 2.5em;
-    font-weight: bold;
-}
-.input{
-    margin-left: .5em;
 }
  .home-button{
     display: flex;
@@ -63,3 +90,34 @@
     font-weight: bold;
 
  }
+}
+
+@media only screen and (max-width: 1200px) {
+  .row{
+    flex-direction: column;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    font-family: 'Museo Sans';
+
+  }
+  .logo{
+    display: flex;
+    width: 100%;
+    height: 40em;
+}
+form{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    font-family: 'Museo Sans';
+}
+.button{
+     margin-bottom: 1em;
+     margin-left: 0;
+}
+
+}
