--- a/frontend/src/pages/styles.css
+++ b/frontend/src/pages/styles.css
@@ -1,43 +1,14 @@
-.button{
-     display: flex;
-     flex-direction: column;
-     background-color: rgb(0, 174, 239);
-     border-radius: 40px;
-     color: white;
-     font-family:'Museo Sans';
-     border-color: rgb(0, 174, 239);
-     width: 15.5em;
-     text-align: center;
-     padding-left: 6.5em;
-     padding-top: .9em;
-     margin-bottom: 1em;
-     height: 3.5em;
-     font-weight: 700;
- }
+
  .redirect{
     color: rgb(0, 174, 239);
 }
-.input{
-    margin-bottom: 1.5em;
-    width: 15em;
-    height: 2.5em
-}
-.signup{
-    display: flex;
-    flex-direction: column;
-    background-color: rgb(0, 174, 239);
-    border-radius: 40px;
-    color: white;
-    font-family:'Museo Sans';
-    border-color: rgb(0, 174, 239);
-    width: 15.5em;
-    text-align: center;
-    padding-left: 5.65em;
-    padding-top: .9em;
-    margin-bottom: 1em;
-    height: 3.5em;
+.button-text{
+    color:white;
     font-weight: 700;
+    font-family:'Museo Sans';
+
 }
+
 .redirect{
     font-family: 'Museo Sans';
     font-weight: 700;
@@ -45,26 +16,38 @@
 }
 .allready{
     font-family: 'Museo Sans';
+    font-weight: 300;
 }
-@media only screen and (min-width: 1200px) {
-  .row{ 
+.button{
+    border:none;
+}
+@media only screen and (min-width: 950px) {
+  .main{ 
     display: flex;
-    flex-wrap:wrap;}
+    flex-wrap:wrap;
+    height: 100%;
+}
+
+.input{
+    box-sizing: border-box;
+    width: 200px;
+    height: 48px;
+    left: 1011px;
+    top: 498px;
+    border: 1px solid #D6D6D6;
+    margin-bottom: 1em;
+  }
+
 .form{
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin-left: 19em;
     text-align: center;
     font-family: 'Museo Sans';
 
 }
-.logo{
-    display: flex;
-    width: 40em;
-    height: 51.2em;
-}
+
 .home{
     display: flex;
     flex-direction: column;
@@ -83,41 +66,129 @@
     width: 10em;
     text-align: center;
     padding-left: 3.3em;
-    margin-top: 1em;
-    padding-top: .5em;
-    margin-bottom: 1em;
     height: 2.5em;
     font-weight: bold;
 
  }
-}
-
-@media only screen and (max-width: 1200px) {
-  .row{
-    flex-direction: column;
-    flex-direction: column;
+ .form-area{
+    display: flex;
     align-items: center;
     justify-content: center;
-    text-align: center;
-    font-family: 'Museo Sans';
-
+    width:55%
   }
-  .logo{
-    display: flex;
-    width: 100%;
-    height: 40em;
+
+.mobile-logo{
+display: none;
+
 }
+.desktop-logo{
+width: 45%;   
+height:100%
+    }
 form{
     display: flex;
     flex-direction: column;
-    align-items: center;
     justify-content: center;
     text-align: center;
     font-family: 'Museo Sans';
+    align-items: center;
+    
+    }
+.button{
+    width: 245px;
+    height: 60px;
+    left: 984px;
+    top: 599px;
+    background: #00AEEF;
+    border-radius: 40px;
+    margin-top: 1.5em;
+    margin-bottom: 2em;
+    }
+.text{
+    width: 424px;
+    height: 60px;
+    left: 899px;
+    font-family: 'Museo Sans';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 36px;
+    margin-bottom: 0.5em;
+        /* or 47px */
+        
+    
+     }
+
+}
+
+@media only screen and (max-width: 950px) {
+
+  .main{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    font-family: 'Museo Sans';
+    width: 390px;
+    flex-wrap:wrap;
+    height: 100%;
+    width: 100%
+
+  }
+  .input{
+    box-sizing: border-box;
+    width: 303px;
+    height: 48px;
+    left: 1011px;
+    top: 498px;
+    border: 1px solid #D6D6D6;
+    margin-bottom: 2em;
+  }
+
+  .form-area{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  .mobile-logo{
+    width: 100%;
+    height: 100%;
+    transform: rotate(-0.19deg);
+    max-width: 550px;
+
+}
+.desktop-logo{
+    display: none;  
+    }
+form{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    font-family: 'Museo Sans';
+    align-items: center;
+
 }
 .button{
-     margin-bottom: 1em;
-     margin-left: 0;
+    width: 245px;
+    height: 60px;
+    left: 984px;
+    top: 599px;
+    background: #00AEEF;
+    border-radius: 40px;
+    margin-top: 1.5em;
+    margin-bottom: 2em;
 }
+ .text{
+    width: 424px;
+    height: 60px;
+    left: 899px;
+    font-family: 'Museo Sans';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 36px;
+    margin-bottom: 0.5em;
+    /* or 47px */
+    
+
+ }
 
 }
